# camera_engine_rkaiq

./: Android.bp  CMakeLists.txt
aiq_core/: RkAiqCore.cpp  RkAiqCoreV21.cpp  RkAiqHandleInt.cpp
algos/awb/: rk_aiq_algo_awb_itf.h
hwi/isp20/: CamHwIsp20.cpp
hwi/isp21/: CamHwIsp21.cpp  Isp21Params.cpp
iqfiles/: gc2385_HS5885-BNSM1018-V01_default.xml  os04a10_CMK-OT1607-FV1_M12-40IRC-4MP-F16.xml  ov5695_TongJu_CHT842-MD.xml  ov8858_HS5885-BNSM1018-V01_default.xml  sc031gs_default_default.xml
rkaiq_3A_server/: CMakeLists.txt  S40rkaiq_3A  rkaiq_3A_server.cpp
tests/rkisp_demo/: CMakeLists.txt
